[gd_scene load_steps=2 format=3 uid="uid://story_event_screen_001"]

[ext_resource type="Script" path="res://scripts/story/StoryEventScreen.gd" id="1"]

[node name="StoryEventScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="CharacterLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftCharacter" type="TextureRect" parent="CharacterLayer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -256.0
offset_right = 356.0
offset_bottom = 256.0
grow_vertical = 2
stretch_mode = 5

[node name="CenterCharacter" type="TextureRect" parent="CharacterLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -256.0
offset_right = 128.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="RightCharacter" type="TextureRect" parent="CharacterLayer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -256.0
offset_right = -100.0
offset_bottom = 256.0
grow_horizontal = 0
grow_vertical = 2
stretch_mode = 5

[node name="TextPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -300.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="TextPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="TextPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="TextPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="EventTitle" type="Label" parent="TextPanel/MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Event Title"

[node name="RouteIndicator" type="Label" parent="TextPanel/MarginContainer/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "[Standard]"
horizontal_alignment = 2

[node name="Description" type="RichTextLabel" parent="TextPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Event description text goes here..."
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="TextPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "âœ•"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
